--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -107,6 +107,8 @@ ENDIF()
 
 INSTALL(PROGRAMS scripts/calc-splits-distances.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 INSTALL(PROGRAMS scripts/calc-pairwise-tip-distances.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
+INSTALL(PROGRAMS scripts/calc-multiset-symmetric-difference.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
+
 INSTALL(DIRECTORY data/ DESTINATION ${TEST_DIR}/data COMPONENT testsuite)
 
 ##############################################################################
@@ -164,6 +166,7 @@ SET(TEST_TARGET_SOURCES
     src/profile_comparison.cpp
     src/labeled_symmetric_difference.cpp
     src/pairwise_tip_distance.cpp
+    src/symmetric_difference_of_multisets.cpp
     )
 
 ## For each test source, create the corresponding executable, add it as ##
