--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -108,6 +108,7 @@ ENDIF()
 INSTALL(PROGRAMS scripts/calc-splits-distances.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 INSTALL(PROGRAMS scripts/calc-pairwise-tip-distances.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 INSTALL(PROGRAMS scripts/calc-multiset-symmetric-difference.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
+INSTALL(PROGRAMS scripts/calc-subtree-leaf-set-sizes.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 
 INSTALL(DIRECTORY data/ DESTINATION ${TEST_DIR}/data COMPONENT testsuite)
 
@@ -167,6 +168,7 @@ SET(TEST_TARGET_SOURCES
     src/labeled_symmetric_difference.cpp
     src/pairwise_tip_distance.cpp
     src/symmetric_difference_of_multisets.cpp
+    src/subtree_leaf_set_sizes.cpp
     )
 
 ## For each test source, create the corresponding executable, add it as ##
