updated to new colugo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ SET(MAIN_PSTRUDEL_SOURCE_DIR
     ${PROJECT_SOURCE_DIR}/pstrudel CACHE PATH "Directory of main source code")
 INCLUDE_DIRECTORIES(
   "${PROJECT_BINARY_DIR}"       # to find "version.h"
-  "${PROJECT_SOURCE_DIR}/src/colugo-utilities"
+  "${PROJECT_SOURCE_DIR}/src/colugo-utilities/include"
   "${PROJECT_SOURCE_DIR}/src/platypus-phyloinformary/include"
 )
 
