--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,12 +45,21 @@ create_CXX_git_version_info_file()
 
 ##############################################################################
 ## Compiler Setup
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
+IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+ENDIF()
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 IF (CMAKE_BUILD_TYPE MATCHES debug)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb3 -g3")
 ELSE()
     # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 ENDIF()
+SET(CMAKE_CXX_FLAGS, "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wcast-align -Wcast-qual
+-Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op
+-Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast
+-Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo
+-Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror
+-Wno-unused")
 
 ##############################################################################
 ## Global source and include directory setup
