correct ncl destination

--- a/ncl/CMakeLists.txt
+++ b/ncl/CMakeLists.txt
@@ -31,7 +31,7 @@ SET(INSTALL_NCL_TARGET "install.ncl")
 ADD_CUSTOM_TARGET(${INSTALL_NCL_TARGET}
     COMMAND ${CMAKE_COMMAND} -D COMPONENT=ncl -P cmake_install.cmake)
 ADD_DEPENDENCIES(${INSTALL_NCL_TARGET} ${NCL_LIBRARY})
-INSTALL(TARGETS ${NCL_LIBRARY} DESTINATION lib COMPONENT ncl)
+INSTALL(TARGETS ${NCL_LIBRARY} DESTINATION lib/ncl COMPONENT ncl)
 SET(NCL_HEADERS
     ncl/ncl.h
     ncl/nxsallocatematrix.h
