--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,58 +69,11 @@ ENDIF()
 
 ##############################################################################
 ## Prerequisites
-
-SET(NCL_PREFIX "" CACHE PATH "Set path to NCL installation to use" )
-OPTION(NCL_DEFAULT "Use default system NCL" OFF)
-IF (NCL_PREFIX)
-    INCLUDE_DIRECTORIES("${NCL_PREFIX}/include")
-    LINK_DIRECTORIES(${NCL_PREFIX})
-    SET(NCL_DEFAULT "yes")
-    # SET(NCL_HEADER_TEST_PATH  "${NCL_PREFIX}/include/ncl/ncl.h")
-    # IF(EXISTS "${NCL_HEADER_TEST_PATH}")
-    #     MESSAGE(STATUS "Found NCL header '${NCL_HEADER_TEST_PATH}'")
-    # ELSE()
-    #     MESSAGE(FATAL_ERROR "Cannot find '${NCL_HEADER_TEST_PATH}'")
-    # ENDIF()
-    # INCLUDE_DIRECTORIES("${NCL_PREFIX}/include")
-    # FIND_LIBRARY(NCL_LIBRARY
-    #     NAMES "ncl"
-    #     PATHS ${NCL_PREFIX}/lib
-    #     PATH_SUFFIXES "ncl"
-    #     REQUIRED)
-    # IF (NCL_LIBRARY AND EXISTS "${NCL_LIBRARY}")
-    #     MESSAGE(STATUS "Found NCL binary: '${NCL_LIBRARY}'")
-    # ELSE()
-    #     MESSAGE(FATAL_ERROR "NCL library not found in: '${NCL_PREFIX}/lib'")
-    # ENDIF()
-    # find_path(CHECK_NCL_H "ncl/ncl.h" REQUIRED)
-ENDIF()
-IF(NCL_DEFAULT)
-    find_path(CHECK_NCL_H
-        "ncl.h"
-        PATHS ${NCL_PREFIX}/include
-        PATH_SUFFIXES "ncl")
-    IF (CHECK_NCL_H)
-        MESSAGE(STATUS "Found NCL headers in: '${CHECK_NCL_H}'")
-    ELSE()
-        MESSAGE(FATAL_ERROR "NCL headers not found")
-    ENDIF()
-    FIND_LIBRARY(NCL_LIBRARY
-        NAMES "ncl"
-        PATHS ${NCL_PREFIX}/lib
-        PATH_SUFFIXES "ncl"
-        REQUIRED)
-    IF (NCL_LIBRARY AND EXISTS "${NCL_LIBRARY}")
-        MESSAGE(STATUS "Found NCL binary: '${NCL_LIBRARY}'")
-    ELSE()
-        MESSAGE(FATAL_ERROR "NCL library not found")
-    ENDIF()
-ELSE()
-    MESSAGE(STATUS "Using local NCL")
-    SET(NCL_LIBRARY "ncl")
-    INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/ncl")
+FIND_PACKAGE(NCL)
+IF (NOT NCL_FOUND)
     ADD_SUBDIRECTORY(ncl)
 ENDIF()
+INCLUDE_DIRECTORIES(${NCL_INCLUDE_DIRS})
 
 ##############################################################################
 ## Global source and include directory setup
