added test for edge lengths (failing)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -111,6 +111,7 @@ INSTALL(PROGRAMS scripts/calc-multiset-symmetric-difference.py DESTINATION ${TES
 INSTALL(PROGRAMS scripts/calc-subtree-leaf-set-sizes.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 INSTALL(PROGRAMS scripts/calc-tree-pairwise-profile-distance.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 INSTALL(PROGRAMS scripts/calc-tree-unlabeled-symmetric-difference.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
+INSTALL(PROGRAMS scripts/check-coalescent-edge-lengths.py DESTINATION ${TEST_DIR} COMPONENT testsuite)
 
 INSTALL(DIRECTORY data/ DESTINATION ${TEST_DIR}/data COMPONENT testsuite)
 
@@ -172,6 +173,7 @@ SET(TEST_TARGET_SOURCES
     src/subtree_leaf_set_sizes.cpp
     src/tree_pairwise_profile_distance.cpp
     src/tree_unlabeled_symmetric_difference_distance.cpp
+    src/canonical_reference_trees.cpp
     )
 
 ## For each test source, create the corresponding executable, add it as ##
